#![warn(unused_extern_crates)]

[package]
name = "brute"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.8.2"
sha2 = "0.10.1"
blake2 = "0.10.2"
ed25519-dalek = "1.0.1"
data-encoding = "2.3.2"
data-encoding-macro = "0.1.12"